--- a/thuchanh3.html
+++ b/thuchanh3.html
@@ -42,7 +42,13 @@
             createCircle();
         }
     }
-    createMultipleCircle();
+    let i = 0;
+    setInterval(function () {
+        let ctx = document.getElementById("myCanvas").getContext("2d");
+        ctx.clearRect(0,0,1368,738);
+        createMultipleCircle();
+        i++;
+    },500);
 </script>
 </body>
 </html>
